# marzichat

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  dev_config.ron  justfile  rust-toolchain.toml  rustfmt.toml  style.css  style.scss
.cargo/: config.toml
app/: Cargo.toml
app/src/: context.rs  lib.rs  main.rs  ui.rs  websocket.rs
app/src/components/: mod.rs
app/src/internationalization/: language.rs  translations.rs
app/src/pages/: home.rs  mod.rs  signup.rs
app/src/stream/: backoff.rs  connection.rs  mod.rs  provider.rs  request.rs
app/src/websocket/: mod.rs  provider.rs  request.rs
assets/favicons/: site.webmanifest
backend/: Cargo.toml  build.rs  dev_config.ron  sample_config.ron  sample_local_config.ron
backend/migrations/: 20230703171509_initial.down.sql  20230703171509_initial.up.sql
backend/src/: account.rs  actor.rs  address.rs  build.rs  config.rs  handler.rs  limiter.rs  logging.rs  main.rs  postgres.rs  routes.rs  server.rs  username.rs  websocket.rs
backend/src/api/: account.rs  mod.rs
backend/src/handler/: account.rs  mod.rs
backend/src/handlers/: mod.rs
backend/src/postgres/: mod.rs
backend/src/server/: client_ip.rs  mod.rs  redirect.rs  tls.rs
common/: Cargo.toml
common/src/: app.rs  build.rs  lib.rs  routes.rs
common/src/api/: mod.rs  username.rs
common/src/internationalization/: language.rs  mod.rs  translations.rs
common/src/types/: account.rs  datetime.rs  email.rs  mod.rs  password.rs  password_hash.rs  username.rs
common/src/utils/: config.rs  logging.rs  mod.rs  stats.rs
datastore/: Cargo.toml  dev_config.ron
datastore/src/: error.rs  lib.rs
designs/: signup.html
gateway/: Cargo.toml  dev_config.ron  sample_config.ron
gateway/src/: config.rs  logging.rs  main.rs
migrations/: 20230703171509_initial.up.sql
server/: Cargo.toml
server/src/: config.rs  logging.rs  main.rs
src/: address.rs  api.rs  ascii_logo.txt  backend.rs  config.rs  internationalization.rs  lib.rs  limiter.rs  logger.rs  main.rs  postgres.rs  redirect.rs  server.rs
src/app/: main.rs
src/components/: nav.rs
src/core/: app.rs  lib.rs
src/routes/: mod.rs  nav.rs  not_found.rs  privacy.rs  signin.rs  signup.rs  terms.rs
src/server/: logging.rs  main.rs
src/types/: datetime.rs  email.rs  mod.rs  password.rs  username.rs
style/: _colors.scss  _common.scss  main.scss
style/components/: _avatar.scss  _blurb.scss  _dialog.scss  _footer.scss  _input.scss  _link.scss  _main.scss  _messenger.scss  _navbar.scss  _sidebar.scss  _text.scss  _toast.scss  _toggle.scss
style/variables/: _colors.scss  _durations.scss  _sizes.scss
