[workspace]
members = ["app", "backend", "common"]

[workspace.package]
edition = "2021"
license = "gpl-3.0-only"
publish = false
readme = "README.md"
repository = "https://github.com/MarzipanClub/marzichat"
rust-version = "1.70.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
chrono = "0.4.26"
const_format = "0.2.31"
derive_more = "0.99.17"
futures = "0.3.28"
http = "0.2.9"
leptos = {version = "0.3.1", default-features = false, features = [
  "serde",
]}
serde = "1.0.164"
sqlx = "0.6.3"
tarpc = "0.33.0"
thiserror = "1.0.40"
uuid = {version = "1.3.1", features = ["serde"]}
zeroize = {version = "1.6.0", features = ["zeroize_derive"]}
