[package]
edition = "2021"
license = "gpl-3.0-only"
name = "marzichat"
publish = false
readme = "README.md"
repository = "https://github.com/MarzipanClub/marzichat"
rust-version = "1.70.0"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
actix-files = {version = "0.6", optional = true}
actix-governor = {version = "0.4", optional = true}
actix-web = {version = "4.3", optional = true, features = ["macros"]}
anyhow = "1.0"
cfg-if = "1.0"
chrono = {version = "0.4", features = ["serde"]}
console_error_panic_hook = "0.1"
console_log = "1.0"
const_format = "0.2"
derive_more = "0.99"
gethostname = {version = "0.4", optional = true}
gloo-net = {version = "0.3", features = ["http"]}
leptos = {version = "0.4", features = ["nightly"]}
leptos_actix = {version = "0.4", optional = true}
leptos_meta = {version = "0.4", features = ["nightly"]}
leptos_router = {version = "0.4", features = ["nightly"]}
log = "0.4"
mailchecker = "5.0"
reqwest = {version = "0.11", features = ["json"]}
sentry = {version = "0.31", optional = true}
sentry-actix = {version = "0.31", optional = true}
sentry-tracing = {version = "0.31", optional = true}
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.7", optional = true}
thiserror = "1.0"
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1.3", features = ["serde"]}
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = ["AbortController", "AbortSignal"]}
zeroize = {version = "1.6", features = ["zeroize_derive"]}
zxcvbn = "2.2"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "actix-files",
  "actix-governor",
  "actix-web",
  "gethostname",
  "leptos_actix",
  "sentry",
  "sentry-actix",
  "sentry-tracing",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "sqlx/runtime-tokio-rustls",
  "sqlx/macros",
  "sqlx/postgres",
  "sqlx/uuid",
  "sqlx/chrono",
]

[package.metadata.cargo-all-features]
# exclude certain features from the build matrix
denylist = [
  "actix-files",
  "actix-governor",
  "actix-web",
  "gethostname",
  "leptos_actix",
  "sentry",
  "sentry-actix",
  "sentry-tracing",
  "sqlx/runtime-tokio-rustls",
  "sqlx/macros",
  "sqlx/postgres",
  "sqlx/uuid",
  "sqlx/chrono",
]
skip_feature_sets = [["ssr", "hydrate"]]

[build-dependencies]
anyhow = "1.0"
chrono = "0.4"
git2 = "0.17"

[package.metadata.leptos]
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "./style.scss"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "npx playwright test"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with tha tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
# env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
