[package]
edition = "2021"
license = "gpl-3.0-only"
name = "marzichat"
publish = false
readme = "README.md"
repository = "https://github.com/MarzipanClub/marzichat"
rust-version = "1.70.0"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
actix-files = {version = "0.6", optional = true}
actix-governor = {version = "0.4", optional = true}
actix-web = {version = "4.3", optional = true, features = ["macros", "rustls"]}
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
console_error_panic_hook = "0.1"
console_log = "1.0"
const_format = "0.2"
derive_more = "0.99"
fncmd = {version = "2.1", optional = true}
futures-util = "0.3"
gloo-net = {version = "0.3", features = ["http"]}
indoc = "2.0"
leptos = {version = "0.4", features = ["nightly"]}
leptos-use = "0.4"
leptos_actix = {version = "0.4", optional = true}
leptos_meta = {version = "0.4", features = ["nightly"]}
leptos_router = {version = "0.4", features = ["nightly"]}
log = "0.4"
mailchecker = "5.0"
rayon = {version = "1.7", optional = true}
reqwest = {version = "0.11", features = ["json"]}
ron = {version = "0.8", optional = true}
rustls-pemfile = "1.0"
sentry = {version = "0.31", optional = true}
sentry-actix = {version = "0.31", optional = true}
sentry-tracing = {version = "0.31", optional = true}
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.7", optional = true}
systemstat = {version = "0.2", optional = true}
thiserror = "1.0"
tokio = {version = "1.27", features = ["full"], optional = true}
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1.3", features = ["serde"]}
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = ["AbortController", "AbortSignal"]}
zeroize = {version = "1.6", features = ["zeroize_derive"]}
zxcvbn = "2.2"

# pinned to 0.20 because actix expects this version of rustls
rustls = "0.20"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "actix-files",
  "actix-governor",
  "actix-web",
  "fncmd",
  "leptos_actix",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/ssr",
  "rayon",
  "ron",
  "sentry-actix",
  "sentry-tracing",
  "sentry",
  "sqlx/chrono",
  "sqlx/macros",
  "sqlx/postgres",
  "sqlx/runtime-tokio-rustls",
  "sqlx/uuid",
  "systemstat",
  "tokio",
]

[package.metadata.cargo-all-features]
# exclude certain features from the build matrix
denylist = [
  "actix-files",
  "actix-governor",
  "actix-web",
  "fncmd",
  "leptos_actix",
  "rayon",
  "ron",
  "sentry-actix",
  "sentry-tracing",
  "sentry",
  "sqlx/chrono",
  "sqlx/macros",
  "sqlx/postgres",
  "sqlx/runtime-tokio-rustls",
  "sqlx/uuid",
  "systemstat",
  "tokio",
]
skip_feature_sets = [["ssr", "hydrate"]]

[build-dependencies]
anyhow = "1.0"
chrono = "0.4"
git2 = "0.17"

[package.metadata.leptos]
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style.scss"

# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content from in debug builds.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The features to use when compiling the bin target
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# The features to use when compiling the lib target
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]
