[package]
name = "app"

edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/bin/app.rs"

[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
common = {path = "../common"}
console_error_panic_hook = {version = "0.1.7", optional = true}
const_format = {workspace = true}
gloo = {version = "0.8.1", optional = true}
leptos = {workspace = true}
leptos_meta = {version = "0.3.1", default-features = false}
leptos_router = {version = "0.3.1", default-features = false}
serde = {workspace = true}
wasm-bindgen = {version = "0.2.87", optional = true}
wasm-log = {version = "0.3.1", optional = true}

[features]
hydrate = [
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen",
  "dep:wasm-log",
  "gloo/storage",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "leptos/hydrate",
]
ssr = [
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/ssr",
]
