[package]
name = "backend"

edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
app = {path = "../app", features = ["ssr"]}
axum = "0.6.18"
axum-sessions = "0.5.0"
color-backtrace = {workspace = true}
common = {path = "../common", features = ["sqlx"]}
const_format = {workspace = true}
derive_more = {workspace = true}
hex = "0.4.3"
hyper = "0.14.26"
leptos = {workspace = true}
leptos_axum = {version = "0.3.0", default-features = false}
rand = {version = "0.8.5", features = ["min_const_gen"]}
ron = {workspace = true}
sentry-tracing = "0.31.3"
serde = {workspace = true}
sqlx = {workspace = true, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "offline"]}
systemstat = "0.2.3"
thiserror = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["trace", "compression-br", "fs"]}
tower_governor = "0.0.4"
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
uuid = {workspace = true}
zeroize = {workspace = true}
