[package]
name = "common"

edition.workspace = true
license-file.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
ron = {workspace = true}
sentry-tracing = "0.31.5"
serde = {workspace = true}
systemstat = "0.2.3"
tokio = {workspace = true, features = ["time", "macros", "rt-multi-thread"]}
tracing = {workspace = true}
tracing-journald = "0.3.0"
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter"]}
