[package]
name = "common"

edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.26", features = ["serde"]}
derive_more = {workspace = true}
getrandom = {version = "0.2.10", features = ["js"]}
mailchecker = "5.0.9"
serde = {workspace = true, features = ["serde_derive"]}
thiserror = "1.0.40"
uuid = {workspace = true}
zeroize = {version = "1.6.0", features = ["zeroize_derive"]}
zxcvbn = "2.2.2"
