[package]
name = "common"

edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {workspace = true, features = ["serde"]}
const_format = {workspace = true}
derive_more = {workspace = true}
getrandom = {version = "0.2.10", features = ["js"]}
http = {workspace = true}
mailchecker = "5.0.9"
serde = {workspace = true, features = ["serde_derive"]}
sqlx = {workspace = true, optional = true}
thiserror = {workspace = true}
uuid = {workspace = true}
zeroize = {workspace = true}
zxcvbn = "2.2.2"
