[package]
name = "datastore"

edition.workspace = true
license-file.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "datastore"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[lib]
name = "datastore"
path = "src/lib.rs"

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true, features = ["derive"]}
color-backtrace = {workspace = true}
common = {path = "../common"}
futures = {workspace = true}
serde = {workspace = true}
tarpc = {workspace = true, features = [
  "serde1",
  "tokio1",
  "serde-transport",
  "serde-transport-bincode",
  "tcp",
  "unix",
]}
tokio = {workspace = true, features = ["macros", "net", "rt-multi-thread"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter"]}
