[package]
name = "gateway"

edition.workspace = true
license-file.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
app = {path = "../app", features = ["ssr"]}
axum = "0.6.18"
color-backtrace = "0.5.1"
const_format = {workspace = true}
hyper = "0.14.26"
leptos = {workspace = true}
leptos_axum = {version = "0.3.0", default-features = false}
once_cell = "1.17.2"
ron = "0.8.0"
sentry-tracing = "0.31.3"
serde = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["trace", "compression-br", "fs"]}
tower_governor = "0.0.4"
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
