[package]
name = "server"

edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
serde = {workspace = true}

axum = "0.6.18"
color-backtrace = "0.5.1"
once_cell = "1.17.2"
sentry-tracing = "0.31.3"
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
ron = "0.8.0"
